--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -891,6 +891,32 @@ tab19 <- odbc::dbGetQuery(con, "select * from pro_questions")
 ```{r tab19_disp, echo = F, include=T, error=T}
 kable(tab19)
 ```
+## Table 20: PRO_Responses: Surveys and Questions included
+
+This table summarizes responses to the behavioral and social survey questions based on which screening surveys each data partner has included.
+
+```{r tab20_res,echo = F, include=T, error=T }
+tab20 <- odbc::dbGetQuery(con, 
+                         paste0("select pro_id, question_id,
+	  count(distinct response_id) as nresponse,
+	  min(response_num) as min_resval,
+	  max(response_num) as max_resval,
+	  SUM(CASE WHEN RESPONSE_NUM IS NULL THEN 1 ELSE 0 END) as resp_num_null,
+	  SUM(CASE WHEN RESPONSE_TEXT = '' THEN 1 ELSE 0 END) as resp_text_na,
+  SUM(CASE WHEN (TRY_CAST(RESPONSE_TEXT AS NUMERIC(8)) = RESPONSE_NUM) OR (NULLIF(RESPONSE_TEXT, '') IS NULL
+               AND RESPONSE_NUM IS NULL)  THEN 0 ELSE 1 END) as resp_text_diff
+	  from ", pro_responses, "
+      group by pro_id, question_id"))
+
+
+tab20_order <- tab20[order(tab20$pro_id, tab20$question_id),]
+	  
+```
+
+```{r tab20_disp, echo = F, include=T, error=T}
+kable(tab20_order, col.names = c("PRO_ID", "QUESTION_ID", "Number of Records", "Minimum Value", "Maximum Value", "Response Number Null", "Response Text Null", "Different values for Response Number and Text"), row.names = F, align = 'c', format.args = list(big.mark = ","))
+```
+
 
 
 
